Fixed some small layout issues

--- a/server/php/css/general2.css
+++ b/server/php/css/general2.css
@@ -355,7 +355,7 @@ a:hover {
 }
 
 .award img {
-	margin: 0px 2px 0px 0px;
+	margin: 2px;
 }
 
 /* -- Menu -- */
