--- a/server/php/css/ie.css
+++ b/server/php/css/ie.css
@@ -69,7 +69,7 @@ img {
 }
 
 .award img {
-	margin: 2px 2px 0px 0px;
+	margin: 2px;
 }
 
 /* -- input -- */
