--- a/server/php/css/modern.css
+++ b/server/php/css/modern.css
@@ -318,7 +318,7 @@ a:hover {
 }
 
 .award img {
-	margin: 0px 2px 0px 0px;
+	margin: 2px;
 }
 
 /* -- Menu -- */
